Changes address book form

--- a/Server/SV/Views/AddressBook.resx
+++ b/Server/SV/Views/AddressBook.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="optionsMenuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
@@ -1465,20 +1465,20 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADs
-        AgAAAk1TRnQBSQFMAwEBAAE4AQABOAEAARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
-        ARADAAEBAQABIAYAARD/ADsAAw0BEgM7AWMCVgFVAbMBZwFgAVcB1gJMAUsBkOQAAysBQwG+AZUBLgH4
-        AfUBsAERAf8B9QGwAREB/wH1AbABEQH/AfUBsAERAf8BeAFqAVIB4twAAwgBCwGDAWkBQQHtAdYBlwET
-        Af8B9QGwAREB/wH1AbABEQH/AfUBsAERAf8B9QGwAREB/wH1AbABEQH/AXgBagFSAeLYAAMWAR4B0wGN
-        AQYB/wHTAY0BBgH/Ac4BigEFAf8CUgFQAaQB9QGwAREB/wH1AbABEQH/AfUBsAERAf8B9QGwAREB/wF4
-        AWoBUgHi1AADDQERAdMBjQEGAf8B0wGNAQYB/wGLAW8BPgHuCAADNwFaAfUBsAERAf8B5wGjARwB/gFZ
-        AVgBVgG7AzcBWtMAAQEBxAF/AQwB/gHTAY0BBgH/AW0BYwFVAdzwAANRAaIByAGFAQUB/wG+AYwBFAH9
-        8AADAQECAfUBsAERAf8BwgGJAREB/wMNARLwAANCAXUB9QGwAREB/wH1AbABEQH/A0IBdPAAAcsBngEk
-        AfoB9QGwAREB/wH1AbABEQH/AfUBsAERAf8DOAFe7AAB9QGwAREB/wH1AbABEQH/AfUBsAERAf8B9QGw
-        AREB/wMyAVDsAAH1AbABEQH/AfUBsAERAf8B9QGwAREB/wH1AbABEQH/8AAB9QGwAREB/wH1AbABEQH/
-        AfUBsAERAf8B9QGwAREB//8A/wDqAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/
-        AQAC/wYAAf8BwQYAAf8BAQYAAfwBAQYAAfgBAQYAAfABwQYAAeEB/wYAAeMB/wYAAcMB/wYAAcMB/wYA
-        AcEB/wYAAcEB/wYAAcMB/wYAAcMB/wYAAv8GAAL/BgAL
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADo
+        AgAAAk1TRnQBSQFMAwEBAAFAAQABQAEAARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
+        ARADAAEBAQABIAYAARD/ADsAAw0BEgM7AWMDVgGzAWQBYAFYAdYCTAFLAZDkAAMrAUMBugGTATEB+AH1
+        AbABEAH/AfUBsAEQAf8B9QGwARAB/wH1AbABEAH/AXIBaAFVAeLcAAMIAQsBfwFoAUQB7QHWAZcBEgH/
+        AfUBsAEQAf8B9QGwARAB/wH1AbABEAH/AfUBsAEQAf8B9QGwARAB/wFyAWgBVQHi2AADFgEeAdMBjQEF
+        Af8B0wGNAQUB/wHOAYoBBAH/AlIBUAGkAfUBsAEQAf8B9QGwARAB/wH1AbABEAH/AfUBsAEQAf8BcgFo
+        AVUB4tQAAw0BEQHTAY0BBQH/AdMBjQEFAf8BhgFtAUIB7ggAAzcBWgH1AbABEAH/AeUBoQEcAf4CWAFW
+        AbsDNwFa0wABAQHCAX8BDAH+AdMBjQEFAf8BaAFhAVYB3PAAA1EBogHIAYUBBAH/Ab0BjAEVAf3wAAMB
+        AQIB9QGwARAB/wHCAYkBEAH/Aw0BEvAAA0IBdQH1AbABEAH/AfUBsAEQAf8DQgF08AABxgGcASUB+gH1
+        AbABEAH/AfUBsAEQAf8B9QGwARAB/wM4AV7sAAH1AbABEAH/AfUBsAEQAf8B9QGwARAB/wH1AbABEAH/
+        AzIBUOwAAfUBsAEQAf8B9QGwARAB/wH1AbABEAH/AfUBsAEQAf/wAAH1AbABEAH/AfUBsAEQAf8B9QGw
+        ARAB/wH1AbABEAH//wD/AOoAAUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8BAAL/
+        BgAB/wHBBgAB/wEBBgAB/AEBBgAB+AEBBgAB8AHBBgAB4QH/BgAB4wH/BgABwwH/BgABwwH/BgABwQH/
+        BgABwQH/BgABwwH/BgABwwH/BgAC/wYAAv8GAAs=
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
